When there is an error, ensure the content is still visible

--- a/assets/editor-symphony.css
+++ b/assets/editor-symphony.css
@@ -42,6 +42,10 @@
     background: #fff;
 }
 
+.invalid .CodeMirror {
+	color: #000;
+}
+
 .editor-statusbar {
     font-size: 1em;
 }
